force-app/main/default/objects/SOQL_Builder_Item__mdt/SOQL_Builder_Item__mdt.object-meta.xml
<CustomObject>
    <label>SOQL Builder Item</label>
    <pluralLabel>SOQLBuilderItems</pluralLabel>
</CustomObject>