force-app/main/default/objects/SOQL_Builder_Item__mdt/fields/FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieldName__c</fullName>
    <description>field to include in Query (select/where)</description>
    <label>FieldName</label>
    <metadataRelationshipControllingField>SOQL_Builder_Item__mdt.ObjectName__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>SOQLBuilderItems</relationshipLabel>
    <relationshipName>SOQLBuilderItems</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>