force-app/main/default/objects/SOQL_Builder_Item__mdt/fields/item_order__c.field-meta.xml
<CustomField>
    <fullName>item_order__c</fullName>
    <description>used to build properly the Advanced where/having logic if exist</description>
    <label>item order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>