force-app/main/default/objects/SOQL_Builder_Item__mdt/fields/Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Item_Value__c</fullName>
    <description>use when we need lookup  related field to include in the query (lookupObj__r.FieldName)  or we store here the Advance Logic  for where Or  the Aggregate  query  field  or the having condition (anything which can not be handled  by Entities)</description>
    <label>Item Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>