force-app/main/default/objects/SOQL_Builder_Item__mdt/fields/itemType__c.field-meta.xml
<CustomField>
    <fullName>itemType__c</fullName>
    <label>itemType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QueryField</fullName>
                <default>true</default>
                <label>QueryField</label>
            </value>
            <value>
                <fullName>WhereClause</fullName>
            </value>
            <value>
                <fullName>GroupBy</fullName>
            </value>
            <value>
                <fullName>HavingClause</fullName>
            </value>
            <value>
                <fullName>Limit</fullName>
            </value>
            <value>
                <fullName>Advanced Where Logic</fullName>
            </value>
            <value>
                <fullName>Advanced Having Logic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>