force-app/main/default/objects/SOQL_Builder_Item__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>if this is equal with theObjecTName of  the Parent  this  is the main objec to query for. Otherwise is an inner query</description>
    <label>ObjectName</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>SOQLBuilderItems</relationshipLabel>
    <relationshipName>SOQLBuilderItems</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>