force-app/main/default/objects/SOQL_Builder_Item__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <description>used when item Type  is WHERE clause</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EQUAL</fullName>
                <default>true</default>
                <label>EQUAL</label>
            </value>
            <value>
                <fullName>NOT EQUAL</fullName>
            </value>
            <value>
                <fullName>GRATER</fullName>
            </value>
            <value>
                <fullName>LESS</fullName>
            </value>
            <value>
                <fullName>CONTAINS</fullName>
            </value>
            <value>
                <fullName>STARTSWITH</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>