force-app/main/default/objects/SOQL_Builder_Item__mdt/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <label>ParentObject</label>
    <referenceTo>SOQL_Builder__mdt</referenceTo>
    <relationshipLabel>SOQLBuilderItems</relationshipLabel>
    <relationshipName>SOQLBuilderItems</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>